# airdeal-vn-bot

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  SPEC.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: api.py  config.py  main.py
app/alerts/: models.py  notifier.py  scheduler.py  service.py
app/bot/: handlers.py  messages.py  telegram_bot.py
app/bot/middleware/: rate_limit.py  webhook_auth.py
app/db/: database.py
app/db/migrations/: 0001_init.sql
app/deals/: history.py  scoring.py  snapshots.py
app/flights/: cache.py  models.py  service.py
app/flights/providers/: atadi.py  atadi_playwright.py  base.py  fast_flights_provider.py  mock.py
app/nlp/: airport_aliases.py  dates_vi.py  parser.py
app/utils/: affiliate.py  flight_key.py  logging.py
docs/: v0.1-plan.md  v0.2-plan.md
docs/adr/: 0001-provider-strategy.md  0002-storage-evolution.md  0003-nlp-strategy.md  0004-alert-dedup.md
tests/: conftest.py  test_affiliate.py  test_api_health.py  test_config.py  test_flight_key.py  test_logging.py  test_main_webhook_config.py
tests/alerts/: test_service.py
tests/bot/: test_handlers.py  test_messages.py  test_rate_limit.py  test_webhook_auth.py
tests/deals/: test_history.py  test_scoring.py  test_snapshots.py
tests/flights/: test_atadi_playwright_provider.py  test_atadi_provider.py  test_fast_flights_provider.py  test_mock_provider.py  test_search_cache.py
tests/nlp/: test_airport_aliases.py  test_dates_vi.py  test_parser.py
